# 2026_dash_chatbot_langgraph

./: .env.example  .gitignore  README.md  pyproject.toml  run_agent.py  run_gui.py
.claude/: settings.json
agent/: __main__.py  checkpoint_s3.py  graph.py  models.py  sandbox.py  service.py  state.py
agent/tools/: artefact_tools.py  mcp_tools.py  sandbox_tools.py
docker/: Dockerfile.sandbox  compose.yaml
gui/: __main__.py  app.py  callbacks.py  client.py  components.py  ids.py  layout.py  models_meta.py
gui/assets/: keys.js  style.css
